Defina fontes diferentes para o seu nome e para a descrição que você criou

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+  
+  <style>
+
+    
+    h1 {
+      font-family: Tahoma, sans-serif;
+    }
+    p{
+      font-family: Verdana, sans-serif;
+    }
+  </style>
+
   <body>
     <a href="#sobre">Sobre mim</a>
     <a href="https://mobalytics.gg/blog/valorant" target="_blank" rel="noopener noreferrer">Blog da hora</a>
