Defina uma cor base de background do seu Portfólio Web

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     p{
       font-family: Verdana, sans-serif;
     }
+    body {
+      background-color: rgb(106, 141, 146)
+    }
   </style>
 
   <body>
