--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
     body {
       background-color: rgb(106, 141, 146)
     }
+    p{
+      font-size: 18px;
+      font-family: Impact, sans-serif;
+      text-align: justify;
+    }
+    strong{
+      color: navy;
+    }
+
+    .js{font-size: 22px;}
+    .bpc{font-size: 20px}
+    .bcpa{font-size: 18px;}
+    .html{font-size: 17;}
+    .css{font-size: 16;}
+    .cs{font-size: 15;}
+    .vs{font-size: 14;}
+    .win{font-size: 13;}
+    .css{font-size: 12;}
   </style>
 
   <body>
@@ -30,7 +48,7 @@
       width="200px"
       id="minhaFoto"
     />
-    <h3>Sobre mim :</h3>
+    <h2>Sobre mim :</h3>
     <p id="sobre">
       Sou brasileiro, nascido e criado em São Paulo, e tenho uma paixão por
       explorar novos lugares. Atualmente, estou focado em construir uma carreira
@@ -44,15 +62,15 @@
     </p>
     <h3>Habilidades:</h3>
     <ul>
-      <li>⭐JavaScrip</li>
-      <li>⭐Análise de diagrama de circuito impresso</li>
-      <li>⭐Montagem de circuito impresso</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>CS</li>
-      <li>Visual Studio</li>
-      <li>Windows</li>
-      <li>Soft skills em suporte</li>
+      <li class="js">JavaScrip⭐</li>
+      <li class="bcp">Montagem de circuito impresso⭐</li>
+      <li class="bcpa">Análise de diagrama de circuito impresso⭐</li>
+      <li class="html">HTML</li>
+      <li class="css">CSS</li>
+      <li class="cs'">CS</li>
+      <li class="vs'">Visual Studio</li>
+      <li class="win">Windows</li>
+      <li class="sss">Soft skills em suporte</li>
     </ul>
     <a href="#minhaFoto">Minha foto</a>
     
