Exercícios - Layout e Box Model no seu Portfólio Web

--- a/index.html
+++ b/index.html
@@ -1,78 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  
-  <style>
 
-    
-    h1 {
-      font-family: Tahoma, sans-serif;
-    }
-    p{
-      font-family: Verdana, sans-serif;
-    }
-    body {
-      background-color: rgb(106, 141, 146)
-    }
-    p{
-      font-size: 18px;
-      font-family: Impact, sans-serif;
-      text-align: justify;
-    }
-    strong{
-      color: navy;
-    }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+<link rel="stylesheet" href="style.css">
 
-    .js{font-size: 22px;}
-    .bpc{font-size: 20px}
-    .bcpa{font-size: 18px;}
-    .html{font-size: 17;}
-    .css{font-size: 16;}
-    .cs{font-size: 15;}
-    .vs{font-size: 14;}
-    .win{font-size: 13;}
-    .css{font-size: 12;}
-  </style>
 
-  <body>
-    <a href="#sobre">Sobre mim</a>
-    <a href="https://mobalytics.gg/blog/valorant" target="_blank" rel="noopener noreferrer">Blog da hora</a>
-    <h1>Claudio Meira Bento da Silva</h1>
-    <img
-      src="https://scontent.fcgh19-1.fna.fbcdn.net/v/t39.30808-6/299926719_5411637995586256_2327630991613110901_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeEdJoKIUPabneqAMlMIdsZw63cbO7gpWQHrdxs7uClZAd_TF9NkSwNxC6qoWdf5lP1tAXLKpHYtca2bnNRPQ-RJ&_nc_ohc=ov1KNwgm5gcAX-1Tnf6&_nc_ht=scontent.fcgh19-1.fna&oh=00_AfDqex9rtqMHNghyhrq4elNCCbZFEpldyZLVGq_Vovcksg&oe=655F598F"
-      alt="Foto na luderia"
-      width="200px"
-      id="minhaFoto"
-    />
-    <h2>Sobre mim :</h3>
-    <p id="sobre">
-      Sou brasileiro, nascido e criado em São Paulo, e tenho uma paixão por
-      explorar novos lugares. Atualmente, estou focado em construir uma carreira
-      sólida nas áreas de <strong><em>Tecnologia da Informação (TI)</strong></em> ou Eletrônica, buscando
-      oportunidades para crescer profissionalmente. Além do meu lado
-      profissional, adoro mergulhar no universo dos jogos, seja através de video
-      games ou jogos de tabuleiro. Nada supera a diversão de passar tempo com
-      amigos em partidas emocionantes e estratégicas. Estou sempre em busca de
-      novas experiências, seja no mundo profissional ou nos momentos de lazer
-      com os jogos e amigos que tanto adoro.
-    </p>
-    <h3>Habilidades:</h3>
-    <ul>
-      <li class="js">JavaScrip⭐</li>
-      <li class="bcp">Montagem de circuito impresso⭐</li>
-      <li class="bcpa">Análise de diagrama de circuito impresso⭐</li>
-      <li class="html">HTML</li>
-      <li class="css">CSS</li>
-      <li class="cs'">CS</li>
-      <li class="vs'">Visual Studio</li>
-      <li class="win">Windows</li>
-      <li class="sss">Soft skills em suporte</li>
-    </ul>
-    <a href="#minhaFoto">Minha foto</a>
-    
-  </body>
+<body>
+  <a href="#sobre">Sobre mim</a>
+  <a href="https://mobalytics.gg/blog/valorant" target="_blank" rel="noopener noreferrer">Blog da hora</a>
+  <div>
+    <h1 class="nome">Claudio Meira Bento da Silva</h1>
+    <div class="foto-desc">
+      <img
+        src="https://scontent.fcgh19-1.fna.fbcdn.net/v/t39.30808-6/299926719_5411637995586256_2327630991613110901_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeEdJoKIUPabneqAMlMIdsZw63cbO7gpWQHrdxs7uClZAd_TF9NkSwNxC6qoWdf5lP1tAXLKpHYtca2bnNRPQ-RJ&_nc_ohc=ov1KNwgm5gcAX-1Tnf6&_nc_ht=scontent.fcgh19-1.fna&oh=00_AfDqex9rtqMHNghyhrq4elNCCbZFEpldyZLVGq_Vovcksg&oe=655F598F"
+        alt="Foto na luderia" width="200px" id="minhaFoto" />
+      <p id="sobre">
+        <strong>Sobre mim:</strong> Sou brasileiro, nascido e criado em São Paulo, e tenho uma paixão por
+        explorar novos lugares. Atualmente, estou focado em construir uma carreira
+        sólida nas áreas de <strong><em>Tecnologia da Informação (TI)</strong></em> ou Eletrônica, buscando
+        oportunidades para crescer profissionalmente. Além do meu lado
+        profissional, adoro mergulhar no universo dos jogos, seja através de video
+        games ou jogos de tabuleiro. Nada supera a diversão de passar tempo com
+        amigos em partidas emocionantes e estratégicas. Estou sempre em busca de
+        novas experiências, seja no mundo profissional ou nos momentos de lazer
+        com os jogos e amigos que tanto adoro.
+      </p>
+    </div>
+  </div>
+  <h3>Habilidades:</h3>
+  <ul>
+    <li class="js">JavaScrip⭐</li>
+    <li class="bcp">Montagem de circuito impresso⭐</li>
+    <li class="bcpa">Análise de diagrama de circuito impresso⭐</li>
+    <li class="html">HTML</li>
+    <li class="css">CSS</li>
+    <li class="cs'">CS</li>
+    <li class="vs'">Visual Studio</li>
+    <li class="win">Windows</li>
+    <li class="sss">Soft skills em suporte</li>
+  </ul>
+  <a href="#minhaFoto" class="foto-link">Minha foto</a>
+
+</body>
+
 </html>
